# permute_070924

./: Cargo.toml  LICENSE
examples/sample1/: Csv.yaml  CsvFeed.yaml  EmploymentRecord.yaml  custom_struct_use.yaml  main.yaml  monetary.yaml  transform.yaml
examples/simple/: Csv.yaml  CsvFeed.yaml  EmploymentRecord.yaml  csv.yaml  csv_feed.yaml  custom_struct.yaml  employment_record.yaml  main.yaml  monetary.yaml  sink.yaml  transform.yaml
src/: ctx.rs  domain.rs  error_expl.rs  expr.rs  lib.rs  project.rs  span.rs
src/core/: permute.yaml
src/project/parse/: v0_1.rs
src/project/parse/v0_1/: content.rs
src/project/parse/v0_1/content/: main.rs  transform.rs  type_system_expr.rs  yaml_loader.rs
