[package]
name = "permute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
lazy-regex = "3"
smallvec = "1.13"
serde = "1"
serde_yml = "0.0.11"
log = "0.4"

[dev-dependencies]
flexi_logger = "0.28.5"
