[package]
name = "permute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
lazy-regex = "3"
smallvec = { version = "1.13", features = ["const_new", "union"] }
serde = "1"
serde_yml = "0.0.11"
log = "0.4"
logos = "0.14.1" # Lexer

[dev-dependencies]
flexi_logger = "0.28.5"
